fixing navbar collapse

--- a/src/components/NavbarItems/navbaritems.css
+++ b/src/components/NavbarItems/navbaritems.css
@@ -1,17 +1,16 @@
- .nav-bg{
-    background-image: url("../../assets/images/bg-1.png");
-    background-repeat: no-repeat;
 
- }
+ .navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+    box-shadow: none !important;
+}
 
- .navbar-expand-lg{
-    background-image: url("../../assets/images/bg-1.png");
-background-repeat: no-repeat;
- }
+.navbar-toggle{
+    border: red;
 
- .nav-transparent{
-    background-color:rgba(255, 0, 0, 0) ;
- }
+}
+
+
  @media screen and (max-width:991px){
     
     .avatar {
