--- a/src/pages/aboutUs/aboutUs.css
+++ b/src/pages/aboutUs/aboutUs.css
@@ -138,11 +138,12 @@
 
 @media screen and (max-width:700px){
   .about-up{
-    background-image: url("../../assets/images/about-up.png");
+    background-image: url("../../assets/images/page-bg-small.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     height: 2040px;
-  
+    background-position-y: bottom;
+
   }
 
   .img-down{
